--- a/data/index.xhtml
+++ b/data/index.xhtml
@@ -1,108 +1,138 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//w3c//dtd xhtml 1.0 strict//en" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<title>
-			pure-knob: Test
-		</title>
-		<script src="http://192.168.1.143/pureknob.js" type="text/javascript"></script>
-		<script type="text/javascript">
-			// <![CDATA[
+
+<style>
+	.myButton {
+		background-color: #2ecc71;
+		border-radius: 10px;
+		border: 1px solid #27ae60;
+		display: inline-block;
+		cursor: pointer;
+		color: #ffffff;
+		font-family: Arial;
+		font-size: 17px;
+		padding: 16px 31px;
+		text-decoration: none;
+		text-shadow: 0px 1px 0px #2c3e50;
+	}
+
+	.myButton:hover {
+		background-color: #27ae60;
+	}
+
+	.myButton:active {
+		position: relative;
+		top: 1px;
+	}
+</style>
+
+<head>
+	<title>
+		pure-knob: Test
+	</title>
+	<script src="pureknob.js" type="text/javascript"></script>
+	<script type="text/javascript">
+
+
+		/*
+		 * Demo code for knob element.
+		 */
+		function demoKnob() {
+			// Create knob element, 300 x 300 px in size.
+			const knob = pureknob.createKnob(300, 300);
+
+			// Set properties.
+			knob.setProperty('angleStart', -0.75 * Math.PI);
+			knob.setProperty('angleEnd', 0.75 * Math.PI);
+			knob.setProperty('colorFG', '#88ff88');
+			knob.setProperty('trackWidth', 0.4);
+			knob.setProperty('valMin', 0);
+			knob.setProperty('valMax', 100);
+
+			// Set initial value.
+			knob.setValue(50);
 
 			/*
-			 * Demo code for knob element.
+			 * Event listener.
+			 *
+			 * Parameter 'knob' is the knob object which was
+			 * actuated. Allows you to associate data with
+			 * it to discern which of your knobs was actuated.
+			 *
+			 * Parameter 'value' is the value which was set
+			 * by the user.
 			 */
-			function demoKnob() {
-				// Create knob element, 300 x 300 px in size.
-				const knob = pureknob.createKnob(300, 300);
+			const listener = function (knob, value) {
+				console.log(value);
+			};
 
-				// Set properties.
-				knob.setProperty('angleStart', -0.75 * Math.PI);
-				knob.setProperty('angleEnd', 0.75 * Math.PI);
-				knob.setProperty('colorFG', '#88ff88');
-				knob.setProperty('trackWidth', 0.4);
-				knob.setProperty('valMin', 0);
-				knob.setProperty('valMax', 100);
+			knob.addListener(listener);
 
-				// Set initial value.
-				knob.setValue(50);
+			// Create element node.
+			const node = knob.node();
+
+			// Add it to the DOM.
+			const elem = document.getElementById('some_element');
+			elem.appendChild(node);
+		}
+
+		/*
+		 * Demo code for bar graph element.
+		 */
+		function demoBarGraph() {
+			const body = document.getElementsByTagName('body')[0];
+			const graph = pureknob.createBarGraph(400, 40);
+			graph.setProperty('colorFG', '#44ff44');
+			graph.setProperty('colorMarkers', '#ffffff');
+			graph.setProperty('markerStart', -60);
+			graph.setProperty('markerEnd', 0);
+			graph.setProperty('markerStep', 10);
+			graph.setProperty('valMin', -145);
+			graph.setProperty('valMax', 0);
+			graph.setValue(-25);
+			graph.setPeaks([-18]);
+			const node = graph.node();
+			body.appendChild(node);
+			window.graph = graph;
+
+			/*
+			 * This is executed on each timer tick.
+			 */
+			const t = function (e) {
+				let v = graph.getValue();
 
 				/*
-				 * Event listener.
-				 *
-				 * Parameter 'knob' is the knob object which was
-				 * actuated. Allows you to associate data with
-				 * it to discern which of your knobs was actuated.
-				 *
-				 * Parameter 'value' is the value which was set
-				 * by the user.
+				 * As long as value is greater than -80, decrement it.
 				 */
-				const listener = function(knob, value) {
-					console.log(value);
-				};
+				if (v > -80) {
+					v--;
+					graph.setValue(v);
+				}
 
-				knob.addListener(listener);
+			};
 
-				// Create element node.
-				const node = knob.node();
+			window.setInterval(t, 200);
+		}
 
-				// Add it to the DOM.
-				const elem = document.getElementById('some_element');
-				elem.appendChild(node);
-			}
+		/*
+		 * This is executed after the document finished loading.
+		 */
+		function ready() {
+			demoKnob();
+			demoBarGraph();
+		}
 
-			/*
-			 * Demo code for bar graph element.
-			 */
-			function demoBarGraph() {
-				const body = document.getElementsByTagName('body')[0];
-				const graph = pureknob.createBarGraph(400, 40);
-				graph.setProperty('colorFG', '#44ff44');
-				graph.setProperty('colorMarkers', '#ffffff');
-				graph.setProperty('markerStart', -60);
-				graph.setProperty('markerEnd', 0);
-				graph.setProperty('markerStep', 10);
-				graph.setProperty('valMin', -145);
-				graph.setProperty('valMax', 0);
-				graph.setValue(-25);
-				graph.setPeaks([-18]);
-				const node = graph.node();
-				body.appendChild(node);
-				window.graph = graph;
+		document.addEventListener('DOMContentLoaded', ready, false);
 
-				/*
-				 * This is executed on each timer tick.
-				 */
-				const t = function(e) {
-					let v = graph.getValue();
+	</script>
+</head>
 
-					/*
-					 * As long as value is greater than -80, decrement it.
-					 */
-					if (v > -80) {
-						v--;
-						graph.setValue(v);
-					}
+<body style="background-color: #34495e">
+	<div class="myButton">
+		<button>Button 1</button>
 
-				};
+	</div>
+</body>
 
-				window.setInterval(t, 200);
-			}
-
-			/*
-			 * This is executed after the document finished loading.
-			 */
-			function ready() {
-				demoKnob();
-				demoBarGraph();
-			}
-
-			document.addEventListener('DOMContentLoaded', ready, false);
-			// ]]>
-		</script>
-	</head>
-	<body style="background-color: #34495e">
-		<div id="some_element"/>
-		<button> type="button1"> CLick </button>
-	</body>
 </html>
