--- a/data/index.xhtml
+++ b/data/index.xhtml
@@ -2,137 +2,233 @@
 <!DOCTYPE html PUBLIC "-//w3c//dtd xhtml 1.0 strict//en" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
-<style>
-	.myButton {
-		background-color: #2ecc71;
-		border-radius: 10px;
-		border: 1px solid #27ae60;
-		display: inline-block;
-		cursor: pointer;
-		color: #ffffff;
-		font-family: Arial;
-		font-size: 17px;
-		padding: 16px 31px;
-		text-decoration: none;
-		text-shadow: 0px 1px 0px #2c3e50;
-	}
-
-	.myButton:hover {
-		background-color: #27ae60;
-	}
-
-	.myButton:active {
-		position: relative;
-		top: 1px;
-	}
-</style>
-
 <head>
 	<title>
-		pure-knob: Test
+		Fiorino
 	</title>
+
 	<script src="pureknob.js" type="text/javascript"></script>
 	<script type="text/javascript">
+		// <![CDATA[
 
+		var soc;
 
-		/*
-		 * Demo code for knob element.
-		 */
-		function demoKnob() {
+		function gauges() {
 			// Create knob element, 300 x 300 px in size.
-			const knob = pureknob.createKnob(300, 300);
+			const socGauge = pureknob.createKnob(300, 300);
+			const speedGauge = pureknob.createKnob(300, 300);
 
 			// Set properties.
-			knob.setProperty('angleStart', -0.75 * Math.PI);
-			knob.setProperty('angleEnd', 0.75 * Math.PI);
-			knob.setProperty('colorFG', '#88ff88');
-			knob.setProperty('trackWidth', 0.4);
-			knob.setProperty('valMin', 0);
-			knob.setProperty('valMax', 100);
+			socGauge.setProperty('angleStart', -0.75 * Math.PI);
+			socGauge.setProperty('angleEnd', 0.75 * Math.PI);
+			socGauge.setProperty('colorFG', '#2ecc71');
+			socGauge.setProperty('colorBG', '#212121');
+			socGauge.setProperty('colorLabel', '#2ecc71');
+			socGauge.setProperty('trackWidth', 0.3);
+			socGauge.setProperty('valMin', 0);
+			socGauge.setProperty('valMax', 100);
+			socGauge.setProperty('textScale', '0.8');
+			socGauge.setProperty('label', 'SOC');
+			//socGauge.setProperty('readonly', 'true');
+			socGauge.setProperty('fnValueToString', function (value) {
+				let string = value.toString();
+				let n = string.length;
 
-			// Set initial value.
-			knob.setValue(50);
+				/*
+				 * If value is just a single digit, add leading zero.
+				 */
+				if (n < 2) {
+					string = '0' + string;
+					n += 1;
+				}
 
-			/*
-			 * Event listener.
-			 *
-			 * Parameter 'knob' is the knob object which was
-			 * actuated. Allows you to associate data with
-			 * it to discern which of your knobs was actuated.
-			 *
-			 * Parameter 'value' is the value which was set
-			 * by the user.
-			 */
-			const listener = function (knob, value) {
+				const prefix = string.slice(0, n - 1);
+				const suffix = string.slice(n - 1, n);
+				const result = prefix + suffix + ' %';
+				return result;
+			});
+
+			socGauge.setValue(84);
+
+			speedGauge.setProperty('angleStart', -0.75 * Math.PI);
+			speedGauge.setProperty('angleEnd', 0.75 * Math.PI);
+			speedGauge.setProperty('colorFG', '#e67e22');
+			speedGauge.setProperty('colorBG', '#212121');
+			speedGauge.setProperty('colorLabel', '#e67e22');
+			speedGauge.setProperty('trackWidth', 0.3);
+			speedGauge.setProperty('valMin', 0);
+			speedGauge.setProperty('valMax', 90);
+			speedGauge.setProperty('textScale', '0.72');
+			speedGauge.setProperty('label', 'Power');
+			speedGauge.setProperty('needle', "true");
+			speedGauge.setProperty('fnValueToString', function (value) {
+				let string = value.toString();
+				let n = string.length;
+
+				/*
+				 * If value is just a single digit, add leading zero.
+				 */
+				if (n < 2) {
+					string = '0' + string;
+					n += 1;
+				}
+
+				const prefix = string.slice(0, n - 1);
+				const suffix = string.slice(n - 1, n);
+				const result = prefix + '.' + suffix + ' kW';
+				return result;
+			});
+
+			const socListener = function (socGauge, value) {
+				console.log(value);
+			};
+			const speedListener = function (speedGauge, value) {
 				console.log(value);
 			};
 
-			knob.addListener(listener);
+			socGauge.addListener(socListener);
+			speedGauge.addListener(speedListener);
 
 			// Create element node.
-			const node = knob.node();
+			const socNode = socGauge.node();
+			const speedNode = speedGauge.node();
 
 			// Add it to the DOM.
-			const elem = document.getElementById('some_element');
-			elem.appendChild(node);
+			const socElem = document.getElementById('socElement');
+			socElem.appendChild(socNode);
+
+			const speedElem = document.getElementById('speedElement');
+			speedElem.appendChild(speedNode);
 		}
 
-		/*
-		 * Demo code for bar graph element.
-		 */
-		function demoBarGraph() {
-			const body = document.getElementsByTagName('body')[0];
-			const graph = pureknob.createBarGraph(400, 40);
-			graph.setProperty('colorFG', '#44ff44');
-			graph.setProperty('colorMarkers', '#ffffff');
-			graph.setProperty('markerStart', -60);
-			graph.setProperty('markerEnd', 0);
-			graph.setProperty('markerStep', 10);
-			graph.setProperty('valMin', -145);
-			graph.setProperty('valMax', 0);
-			graph.setValue(-25);
-			graph.setPeaks([-18]);
-			const node = graph.node();
-			body.appendChild(node);
-			window.graph = graph;
-
-			/*
-			 * This is executed on each timer tick.
-			 */
-			const t = function (e) {
-				let v = graph.getValue();
-
-				/*
-				 * As long as value is greater than -80, decrement it.
-				 */
-				if (v > -80) {
-					v--;
-					graph.setValue(v);
-				}
-
-			};
-
-			window.setInterval(t, 200);
-		}
-
-		/*
-		 * This is executed after the document finished loading.
-		 */
 		function ready() {
-			demoKnob();
-			demoBarGraph();
+			gauges();
+
 		}
 
 		document.addEventListener('DOMContentLoaded', ready, false);
-
+			// ]]>
 	</script>
 </head>
 
 <body style="background-color: #34495e">
-	<div class="myButton">
-		<button>Button 1</button>
+	<style>
+		.parent {
+			display: flex;
+			width: 100%;
+		}
+		.child {
+			margin: auto;
+			width: 100%;
+		}
+
+		.button {
+			background-color: #2ecc71;
+			border-radius: 10px;
+			border: 1px solid #27ae60;
+			display: inline-block;
+			cursor: pointer;
+			color: #212121;
+			font-family: Arial;
+			font-size: 17px;
+			padding: 16px 31px;
+			text-decoration: none;
+			margin-left: 25px;
+		}
+
+		.button:hover {
+			background-color: #27ae60;
+		}
+
+		.button:active {
+			position: relative;
+			top: 1px;
+		}
+
+		.spacer {
+			height: 40px;
+		}
+
+		.knob {
+			margin-top: auto;
+			margin-left: auto;
+			margin-right: auto;
+		}
+
+		.textstyle {
+			font-family: Arial;
+			font-size: 17px;
+			color: #95a5a6;
+			margin-left: 25px;
+		}
+
+		.display {
+			background-color: #bdc3c7;
+			border-radius: 10px;
+			border: 4px solid #212121;
+			display: inline-block;
+			cursor: pointer;
+			color: #212121;
+			font-family: Arial;
+			font-size: 17px;
+			padding: 16px 31px;
+			text-decoration: none;
+			margin-left: 25px;
+			margin-right: 25px;
+		}
+
+		.container {
+			text-align: center;
+			float: left;
+		}
+
+		.textblock {
+			display: inline-block;
+			text-align: center;
+		}
+
+		.textblock>.display {
+			display: block;
+		}
+	</style>
+ 
+	<div class="parent">
+		<div id="socElement" class="knob"> </div>
+		<div id="speedElement" class="knob"> </div>
+		<div class="spacer"></div>
+	</div>
+
+	<div class="parent">
+		<div>
+			<p class="textstyle">Vmin</p>
+			<span class="display" id="Vmin">0.00</span>
+		</div>
+
+		<div>
+			<p class="textstyle">Vmax</p>
+			<span class="display" id="Vmax">0.00</span>
+		</div>
+		<div>
+			<p class="textstyle">Vavg</p>
+			<span class="display" id="Vavg">0.00</span>
+		</div>
+
 
 	</div>
+
+	<div class="spacer"></div>
+
+	<p class="textstyle">
+		Manage Firmware
+	</p>
+
+	<div>
+		<span class="button" id="parameters">Parameters</span>
+		<span class="button" id="upload">Upload</span>
+		<span class="button" id="parameters">Wifi Settings</span>
+	</div>
+
+
 </body>
 
 </html>
